--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h1>Featured projects:</h1>
             <div class="project first">
               
-              <img class="img" src="/images/friendwich.png" alt="Friendwich app" />
+              <img class="img" src="/images/friendwich.PNG" alt="Friendwich app" />
            
               <div class="description">
                 <h3>Friendwich</h3>
