--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <section class="main-section">
           <h1>Hi, I'm Mikołaj! 👋</h1>
           <p>
-           self-taught front-end developer that enjoys learning new skills and coming up with solutions to interesting problems. For more details, you can reach me through the following links: <a href="https://github.com/mikkio-j/" target="_blank">github</a>, <a href="https://www.linkedin.com/in/miko%C5%82aj-j%C4%99drzejewski-a03556177/" target="_blank">linkedin</a>. Or you can send me an email: <b>mikkiodev@gmail.com</b>
+           self-taught front-end developer that enjoys learning new skills and coming up with solutions to interesting problems. For more details, you can reach me through the following links: <a href="https://github.com/mikkio-j/" target="_blank">github</a>, <a href="https://www.linkedin.com/in/miko%C5%82aj-j%C4%99drzejewski-a03556177/" target="_blank">linkedin</a>. Alternatively, you can send me an email to <b>mikkiodev@gmail.com</b>
           </p>
           <p>
-            Recently I have been using MERN stack which is MongoDB, Express, React and Node.js. Aside from that I use Redux, Thunk, Socket.io, Git and Heroku for state management, live updates, version control and hosting.
+            Recently I have been using MERN stack which consists of MongoDB, Express, React and Node.js. Aside from that I use Redux, Thunk, Socket.io, Git and Heroku for state management, live updates, version control and hosting.
           </p>
           <div class="projects" id="projects">
             <h1>Featured projects:</h1>
@@ -92,7 +92,7 @@
           <div class="mail">
             <p>This website:</p>
             <span
-              >just a simple landing page made in one sunny day with some help of an ethiopian coffee and aeropress❤️</span
+              >just a simple landing page made in one sunny day with some help of Ethiopian coffee and an Aeropress❤️</span
             >
           </div>
           <div class="social">
