--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Mikołaj J. (@mikkio) - front end developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="./images/fb.png" />
     <link rel='shortcut icon' type='image/x-icon' href='images/favicon.ico' />
     <link
       rel="stylesheet"
