fix picture link

--- a/index.html
+++ b/index.html
@@ -56,13 +56,18 @@
             version control and hosting.
           </p>
           <div class="projects" id="projects">
-            <h1>Featured projects:</h1>
+            <h1 class="section-title">Featured projects:</h1>
             <div class="project first">
-              <img
-                class="img"
-                src="./images/friendwich.PNG"
-                alt="Friendwich app"
-              />
+              <a
+                href="https://friendwich.herokuapp.com/"
+                target="_blank"
+                class="img-link"
+              >
+                <img
+                  class="img"
+                  src="./images/friendwich.PNG"
+                  alt="Friendwich app"
+              /></a>
 
               <div class="description">
                 <h3>Friendwich</h3>
@@ -74,7 +79,7 @@
                   <span>Stack: </span>react, redux, mongoose, express,
                   socket.io, jsonwebtoken, sass
                 </p>
-                <div>
+                <div class="project-links">
                   <a
                     href="https://github.com/mikkio-j/friendwich"
                     target="_blank"
@@ -117,7 +122,7 @@
               </div>
             </div>
           </div> -->
-          <h1>Contact me:</h1>
+          <h1 class="section-title">Contact me:</h1>
           <form class="dark-selector" id="form">
             <div class="form-control">
               <label>
