fix contact href

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </div>
             </div>
           </div> -->
-          <h1 class="section-title">Contact me:</h1>
+          <h1 class="section-title" id="contact">Contact me:</h1>
           <form class="dark-selector" id="form">
             <div class="form-control">
               <label>
@@ -149,7 +149,7 @@
           </form>
         </section>
       </section>
-      <footer id="contact" class="dark-selector">
+      <footer class="dark-selector">
         <div>
           <div class="mail">
             <p>This website:</p>
