--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <div class="form-message">Error: name is required</div>
+    <div class="form-message"></div>
     <div class="dark-selector">
       <div class="darkmode-switch">
         <a>
