change hidden view

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Mikołaj J. (@mikkio) - front end developer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
     <meta property="og:image" content="https://mikkio.com/images/fb.PNG" />
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <link
