--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <section class="main-section">
           <h1>Hi, I'm Mikołaj! 👋</h1>
           <p>
-            self-taught front-end developer that enjoys learning new skills and
-            coming up with solutions to interesting problems. For more details,
-            you can reach me through the following links:
+            front-end developer that enjoys learning new skills and coming up
+            with solutions to interesting problems. For more details, you can
+            reach me through the following links:
             <a href="https://github.com/mikkio-j/" target="_blank">github</a>,
             <a
               href="https://www.linkedin.com/in/miko%C5%82aj-j%C4%99drzejewski-a03556177/"
@@ -53,10 +53,11 @@
             <b>mikkiodev@gmail.com</b>
           </p>
           <p>
-            Recently I have been using MERN stack which consists of MongoDB,
-            Express, React and Node.js. Aside from that I use Redux, Thunk,
-            Socket.io, Git and Heroku for state management, live updates,
-            version control and hosting.
+            I have been learning front end since 2017. Recently I have been
+            using MERN stack which consists of MongoDB, Express, React and
+            Node.js. Aside from that I use Redux, Thunk, Socket.io, Git and
+            Heroku for state management, live updates, version control and
+            hosting. Jest/Enzyme and Mocha/Chai for unit tests.
           </p>
           <div class="projects" id="projects">
             <h1 class="section-title">Featured projects:</h1>
