edit project photo

--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
                 target="_blank"
                 class="img-link"
               >
-                <img
-                  class="img"
-                  src="./images/friendwich.PNG"
-                  alt="Friendwich app"
+                <img class="img" src="./images/11.png" alt="Friendwich app"
               /></a>
 
               <div class="description">
