--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Mikołaj J. (@mikkio) - front end developer</title>
+    <title>Mikołaj J. (@mikkio) - web developer</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
@@ -41,9 +41,9 @@
         <section class="main-section">
           <h1>Hi, I'm Mikołaj! 👋</h1>
           <p>
-            front-end developer that enjoys learning new skills and coming up
-            with solutions to interesting problems. For more details, you can
-            reach me through the following links:
+            web developer that enjoys learning new skills and coming up with
+            solutions to interesting problems. For more details, you can reach
+            me through the following links:
             <a href="https://github.com/mikkio-j/" target="_blank">github</a>,
             <a
               href="https://www.linkedin.com/in/miko%C5%82aj-j%C4%99drzejewski-a03556177/"
