--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             using MERN stack which consists of MongoDB, Express, React and
             Node.js. Aside from that I use Redux, Thunk, Socket.io, Git and
             Heroku for state management, live updates, version control and
-            hosting. Jest/Enzyme and Mocha/Chai for unit tests.
+            hosting.
           </p>
           <div class="projects" id="projects">
             <h1 class="section-title">Featured projects:</h1>
