fix view for small devices

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
       <section class="dark-selector">
         <section class="main-section">
-          <h1>Hi, I'm Mikołaj! 👋</h1>
+          <h1 class="main-section__header">Hi, I'm Mikołaj! 👋</h1>
           <p>
             web developer that enjoys learning new skills and coming up with
             solutions to interesting problems. For more details, you can reach
