add daily programmer to portfolio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
       <section class="dark-selector">
         <section class="main-section">
-          <h1 class="main-section__header">Hi, I'm Mikołaj! 👋</h1>
+          <h1 class=>Hi, I'm Mikołaj! 👋</h1>
           <p>
             web developer that enjoys learning new skills and coming up with
             solutions to interesting problems. For more details, you can reach
@@ -67,7 +67,38 @@
                 target="_blank"
                 class="img-link"
               >
-                <img class="img" src="./images/11.png" alt="Friendwich app"
+                <img class="img" src="./images/dailyprogrammer.png" alt="Friendwich app"
+              /></a>
+
+              <div class="description">
+                <h3>Daily Programmer</h3>
+                <p>
+                  Daily programmer is about challenging my skills in a variety of fields, such as: algorithms, data structures or problem-solving capability itself. You will find here solutions to challenges from /r/dailyprogrammer subreddit.
+                </p>
+                <p>
+                  <span>Stack: </span>Node.js, Jest
+                </p>
+                <div class="project-links">
+                  <a
+                    href="https://github.com/mikkio-j/dailyprogrammer"
+                    target="_blank"
+                    >Github</a
+                  >
+                  <a href="https://mikkio-j.github.io/dailyprogrammer/" target="_blank"
+                    >DEMO</a
+                  >
+                </div>
+              </div>
+            </div>
+
+
+            <div class="project first">
+              <a
+                href="https://friendwich.herokuapp.com/"
+                target="_blank"
+                class="img-link"
+              >
+                <img class="img" src="./images/friendwich1.png" alt="Friendwich app"
               /></a>
 
               <div class="description">
