--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                   <span>Stack: </span>Node.js, Jest
                 </p>
                 <div class="project-links">
-                  <a
+                  <a class="bn40"
                     href="https://github.com/mikkio-j/dailyprogrammer"
                     target="_blank"
                     >Github</a
                   >
-                  <a href="https://mikkio-j.github.io/dailyprogrammer/" target="_blank"
-                    >DEMO</a
+                  <a class="bn40" href="https://mikkio-j.github.io/dailyprogrammer/" target="_blank"
+                    >LIVE</a
                   >
                 </div>
               </div>
@@ -112,13 +112,13 @@
                   socket.io, jsonwebtoken, sass
                 </p>
                 <div class="project-links">
-                  <a
+                  <a class="bn40"
                     href="https://github.com/mikkio-j/friendwich"
                     target="_blank"
                     >Github</a
                   >
-                  <a href="https://friendwich.herokuapp.com/" target="_blank"
-                    >DEMO</a
+                  <a class="bn40" href="https://friendwich.herokuapp.com/" target="_blank"
+                    >LIVE</a
                   >
                 </div>
               </div>
