edit button for contact submit

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 ></textarea>
               </label>
             </div>
-            <button type="submit">Send</button>
+            <button type="submit" class="bn30"><span>Send</span></button>
           </form>
         </section>
       </section>
