add project, grid view for projects, scrollbar

--- a/index.html
+++ b/index.html
@@ -61,6 +61,35 @@
           </p>
           <div class="projects" id="projects">
             <h1 class="section-title">Featured projects:</h1>
+          </div>
+          </section>
+        </section>
+        <section class="projects-grid">
+            <div class="project first">
+              <a
+                href="#"
+                target="_blank"
+                class="img-link"
+              >
+                <img class="img" src="./images/dramat.png" alt="Dramat Europe"
+              /></a>
+
+              <div class="description">
+                
+                <h3>Dramat Europe <span class="commercial">(commercial project)</span></h3>
+                <p>
+                  Theme designed and built for clothing/apparel e-commerce store on Shopify platform. Besides html/css and vanilla js I used the following tools:
+                </p>
+                <p>
+                  <span>Stack: </span>Liquid, Slate, ThemeKit, Figma
+                </p>
+                <div class="project-links">
+                  <a class="bn40" href="#" target="_blank"
+                    >LIVE</a
+                  >
+                </div>
+              </div>
+            </div>
             <div class="project first">
               <a
                 href="https://mikkio-j.github.io/dailyprogrammer/"
@@ -73,7 +102,7 @@
               <div class="description">
                 <h3>Daily Programmer</h3>
                 <p>
-                  Daily programmer is about challenging my skills in a variety of fields, such as: algorithms, data structures or problem-solving capability itself. You will find here solutions to challenges from /r/dailyprogrammer subreddit.
+                  Daily programmer is about challenging my skills in a variety of fields, such as: algorithms, data structures or problem-solving capability itself.
                 </p>
                 <p>
                   <span>Stack: </span>Node.js, Jest
@@ -90,7 +119,6 @@
                 </div>
               </div>
             </div>
-
 
             <div class="project first">
               <a
@@ -123,7 +151,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </section>
 
           <!-- <div class="project second">
               <div class="description left">
@@ -154,6 +182,8 @@
               </div>
             </div>
           </div> -->
+          <section class="dark-selector">
+            <section class="main-section">
           <h1 class="section-title" id="contact">Contact me:</h1>
           <form class="dark-selector" id="form">
             <div class="form-control">
@@ -180,7 +210,7 @@
             <button type="submit" class="bn30"><span>Send</span></button>
           </form>
         </section>
-      </section>
+        </section>
       <footer class="dark-selector">
         <div>
           <div class="mail">
