add new project

--- a/index.html
+++ b/index.html
@@ -65,9 +65,34 @@
           </section>
         </section>
         <section class="projects-grid">
+          <div class="project first">
+            <a
+              href="#"
+              target="_blank"
+              class="img-link"
+            >
+              <img class="img" src="./images/bookownia.png" alt="Bookownia"
+            /></a>
+
+            <div class="description">
+              
+              <h3>Bookownia <span class="commercial">(new project)</span></h3>
+              <p>
+                Bookstore project. Currently working on it. No live view available for now.
+              </p>
+              <p>
+                <span>Stack: </span>React, Storybook, Styled-components, Figma
+              </p>
+              <div class="project-links">
+                <a class="bn40" href="https://github.com/mikkio-j/bookownia" target="_blank"
+                  >Github</a
+                >
+              </div>
+            </div>
+          </div>
             <div class="project first">
               <a
-                href="#"
+                href="https://dramateurope.com/"
                 target="_blank"
                 class="img-link"
               >
@@ -84,7 +109,7 @@
                   <span>Stack: </span>Liquid, Slate, ThemeKit, Figma
                 </p>
                 <div class="project-links">
-                  <a class="bn40" href="#" target="_blank"
+                  <a class="bn40" href="https://dramateurope.com/" target="_blank"
                     >LIVE</a
                   >
                 </div>
