add new view for projects

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               target="_blank"
               class="img-link"
             >
-              <img class="img" src="./images/bookownia.png" alt="Bookownia"
+              <img class="img" src="./images/bookownia_alt.png" alt="Bookownia"
             /></a>
 
             <div class="description">
@@ -96,7 +96,7 @@
                 target="_blank"
                 class="img-link"
               >
-                <img class="img" src="./images/dramat.png" alt="Dramat Europe"
+                <img class="img" src="./images/jasne.png" alt="Dramat Europe"
               /></a>
 
               <div class="description">
@@ -121,7 +121,7 @@
                 target="_blank"
                 class="img-link"
               >
-                <img class="img" src="./images/dailyprogrammer.png" alt="Daily Programmer"
+                <img class="img" src="./images/dailyprogrammer_alt.png" alt="Daily Programmer"
               /></a>
 
               <div class="description">
@@ -151,7 +151,7 @@
                 target="_blank"
                 class="img-link"
               >
-                <img class="img" src="./images/friendwich1.png" alt="Friendwich app"
+                <img class="img" src="./images/friendwich1_alt.png" alt="Friendwich app"
               /></a>
 
               <div class="description">
