edit bookownia link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section class="projects-grid">
           <div class="project first">
             <a
-              href="#"
+              href="https://github.com/mikkio-j/bookownia"
               target="_blank"
               class="img-link"
             >
